<?xml version="1.0"?>
<package format="3">
  <name>command_handler</name>
  <version>0.0.0</version>
  <description>Publishes and reacts to command strings.</description>

  <maintainer email="ojha.nitrklcse@gmail.com">Ayush Ojha</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

